fix: modify blog page styles to fix blog card layout issue

--- a/src/app/blog/Blog.css
+++ b/src/app/blog/Blog.css
@@ -4,6 +4,7 @@
   gap: 5rem;
   align-items: center;
   height: 100%;
+  width: 100%;
   font-size: 2.4rem;
   text-align: center;
 }
@@ -16,6 +17,8 @@
   display: flex;
   gap: 8rem;
   align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .blog__list {
@@ -23,7 +26,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 6rem;
-  row-gap: 10rem;
+  row-gap: 6rem;
 }
 
 .blog__list__item {
@@ -38,6 +41,7 @@
   border-radius: 10px;
   transition: all 0.3s;
   cursor: pointer;
+  height: 30rem;
 }
 
 .blog__list__item:hover {
@@ -68,7 +72,7 @@
 }
 
 .blog__title {
-  font-size: 2rem;
+  font-size: 1.8rem;
   color: #495057;
   font-weight: 600;
 }
@@ -85,10 +89,6 @@
 }
 
 .blog__views-wrapper {
-  position: absolute;
-  bottom: 1.5rem;
-  left: 2rem;
-
   display: flex;
   align-items: center;
   gap: 1rem;
